--- a/FakestoreEcommerceTests.csproj
+++ b/FakestoreEcommerceTests.csproj
@@ -17,12 +17,16 @@
     <PackageReference Include="nunit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+
+
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Drivers\" />
     <Folder Include="DataFactory\" />
-    <Folder Include="Helpers\" />
     <Folder Include="Models\" />
     <Folder Include="TestData\" />
     <Folder Include="Support\" />
