--- a/appsettings.json
+++ b/appsettings.json
@@ -3,8 +3,8 @@
         //Adres http website'a
         "WebSitePage": "https://fakestore.testelka.pl/",
         //Na jakiej przegladarce testy mają być uruchamiane
-        "Driver": "Chrome"
-        
-
+        "Driver": "Chrome",
+        "AdminName": "test@admin.pl",
+        "AdminPassword": "Bartek.240397"
     }
 }
