Proces logowanie na klienta + DDT

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,6 @@
         //Na jakiej przegladarce testy mają być uruchamiane
         "Driver": "Chrome",
         "AdminName": "test@admin.pl",
-        "AdminPassword": "Bartek.240397"
+        "AdminPassword": "testhaslo12345!"
     }
 }
